--- a/src/Modules/Scholarship/user/pages/ScholarshipPage.module.css
+++ b/src/Modules/Scholarship/user/pages/ScholarshipPage.module.css
@@ -4,7 +4,8 @@
   border: none; /* Remove border */
   margin: 0.5rem;
   border-radius: 0.375rem;
-  padding: 4%;
+  padding-left: 4%;
+  padding-top: 1%;
   overflow: visible; /* Remove overflow-y: scroll */
 }
 
