--- a/src/Modules/Scholarship/user/components/PreviousWinners.module.css
+++ b/src/Modules/Scholarship/user/components/PreviousWinners.module.css
@@ -1,46 +1,59 @@
-/* Wrapper for the form */
 .wrapper {
-  border-top: 2px solid #3b82f6;
-  margin-top: 2rem;
-  padding: 1rem;
+  padding: 20px;
 }
-
 .formRow {
   display: flex;
-  flex-direction: row;
-  gap: 2rem;
-  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
 .formItem {
-  padding: 1rem;
+  flex: 1;
 }
 
-.formItem label {
+.label {
+  font-weight: bold; /* Make the label text bold */
+  margin-bottom: 5px; /* Space between the label and select */
+}
+
+.selectContainer {
+  position: relative;
+}
+
+.select {
+  width: 100%;
+  padding: 10px 15px;
+  appearance: none;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  background-color: white;
   font-size: 14px;
 }
 
-.formItem select {
-  height: 30px;
-  width: 200px;
-  border: 2px solid black;
-  margin-top: 1rem;
-  padding-left: 0.5rem;
+.caretIcon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none;
+  color: #888;
 }
 
 .buttonContainer {
-  padding: 1rem;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .submitButton {
-  height: 2rem;
-  width: 9rem;
-  background-color: #93c5fd;
-  border-radius: 0.375rem;
-  border: 2px solid #3b82f6;
+  background-color: #17ABFF;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 30px;
+  font-size: 16px;
   cursor: pointer;
 }
 
 .submitButton:hover {
-  background-color: #60a5fa;
+  background-color: #1499e6;
 }
