--- a/src/Modules/Scholarship/convenor/pages/Convenor.module.css
+++ b/src/Modules/Scholarship/convenor/pages/Convenor.module.css
@@ -1,11 +1,14 @@
 .wrapper {
   width: 80%;
   max-height: 80%;
-  border: none; /* Remove border */
   margin: 0.5rem;
   border-radius: 0.375rem;
   padding: 4%;
-  overflow: visible; /* Remove overflow-y: scroll */
+  overflow: visible; /* Allow full content to be displayed */
+
+  /* New styling for black box border */
+  border: 0.5mm solid #C9EBFF; /* 1mm thick black border */
+  background-color: white; /* Optional: Set background for contrast */
 }
 
 .buttonContainer {
@@ -24,7 +27,7 @@
 .progressBar {
   width: 100%;
   height: 0.25rem;
-  background-color: lightblue;
+  background-color: #C9EBFF;
   border-radius: 0.375rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -40,13 +43,15 @@
 }
 
 .activeProgress {
-  background-color: blue;
+  background-color: #17ABFF;
 }
 
 .inactiveProgress {
-  background-color: lightblue;
+  background-color: #C9EBFF;
 }
 
 .hr {
   margin: 1rem 0;
+  border: 0; /* Remove default hr border */
+  /* Black line to match the box border */
 }
