--- a/src/Modules/Scholarship/convenor/forms/inviteApplications.module.css
+++ b/src/Modules/Scholarship/convenor/forms/inviteApplications.module.css
@@ -1,19 +1,20 @@
 .container {
-    max-width: 800px;
+   padding-right: 500px;
     margin: 0 auto;
-    padding: 20px;
     font-family: Arial, sans-serif;
+    text-align: left; 
+    padding-left: 150px;
   }
   
   .tabs {
     display: flex;
+    justify-content: flex-start;
     border-bottom: 2px solid #e0e0e0;
     margin-bottom: 20px;
   }
   
   .activeTab {
-    padding: 10px 20px;
-    border-bottom: 2px solid #2196f3;
+    border-bottom:  solid #2196f3;
     color: #2196f3;
     font-weight: bold;
   }
@@ -22,12 +23,11 @@
     background-color: #fff;
     padding: 20px;
     border-radius: 4px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   }
   
   .row {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-bottom: 20px;
   }
   
@@ -62,19 +62,19 @@
   .submitButton {
     background-color: #2196f3;
     color: white;
-    padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-size: 16px;
     float: right;
+    width: 120px;
   }
+ button{
+  margin-top: 10px;
   
+ }
   .submitButton:hover {
     background-color: #1976d2;
   max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
   font-family: Arial, sans-serif;
 }
 
@@ -93,7 +93,7 @@
 
 .form {
   background-color: #fff;
-  padding: 20px;
+  padding: 70px;
   border-radius: 4px;
   box-shadow:
     0 1px 3px rgba(0, 0, 0, 0.12),
@@ -104,6 +104,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  flex-direction: row;
 }
 
 .inputGroup {
@@ -144,7 +145,6 @@ textarea {
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
-  float: right;
 }
 
 .submitButton:hover {
