--- a/src/Modules/Scholarship/user/pages/BrowseApplication.module.css
+++ b/src/Modules/Scholarship/user/pages/BrowseApplication.module.css
@@ -1,57 +1,64 @@
 .wrapper {
-    width: 80%;
-    max-height: 80%;
-    margin: 0.5rem;
-    border-radius: 0.375rem;
-    padding: 4%;
-    overflow: visible; /* Allow full content to be displayed */
+  width: 90vw;
+  margin-left: 32px;
+  margin-top: 20px;
+  max-height: 80%;
+  border-radius: 0.375rem;
+  padding: 4%;
+  overflow: visible;
+
   
-    /* New styling for black box border */
-    border: 0.5mm solid #C9EBFF; /* 1mm thick black border */
-    background-color: white; /* Optional: Set background for contrast */
-  }
+  border: 0.5mm solid #C9EBFF;
   
-  .buttonContainer {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
+  background-color: white;
   
-  .button {
-    padding: 0.5rem;
-    cursor: pointer;
-    border: none; /* Remove button borders */
-    background: none; /* Optional: remove any background styling */
-  }
-  
-  .progressBar {
-    width: 100%;
-    height: 0.25rem;
-    background-color: #C9EBFF;
-    border-radius: 0.375rem;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin-top: 0.5rem;
-  }
-  
-  .progressButton {
-    cursor: pointer;
-    height: 100%;
-    width: 100%;
-    border-radius: 0.375rem;
-    border: none; /* Remove border from progress buttons */
-  }
-  
-  .activeProgress {
-    background-color: #17ABFF;
-  }
-  
-  .inactiveProgress {
-    background-color: #C9EBFF;
-  }
-  
-  .hr {
-    margin: 1rem 0;
-    border: 0; /* Remove default hr border */
-    /* Black line to match the box border */
-  }
+}
+
+.buttonContainer {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.button {
+  padding: 0.5rem;
+  cursor: pointer;
+  border: none;
+  /* Remove button borders */
+  background: none;
+  /* Optional: remove any background styling */
+}
+
+.progressBar {
+  width: 100%;
+  height: 0.25rem;
+  background-color: #C9EBFF;
+  border-radius: 0.375rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 0.5rem;
+}
+
+.progressButton {
+  cursor: pointer;
+  height: 100%;
+  width: 100%;
+  border-radius: 0.375rem;
+  border: none;
+  /* Remove border from progress buttons */
+}
+
+.activeProgress {
+  background-color: #17ABFF;
+}
+
+.inactiveProgress {
+  background-color: #C9EBFF;
+}
+
+.hr {
+  margin: 1rem 0;
+  border: 0;
+  /* Remove default hr border */
+  /* Black line to match the box border */
+}
