--- a/src/Modules/Scholarship/user/pages/ScholarshipStatusPage.module.css
+++ b/src/Modules/Scholarship/user/pages/ScholarshipStatusPage.module.css
@@ -1,7 +1,7 @@
 .pageContainer {
-  width: 80%;
-  margin-left: 3rem;
-  margin-top: 1rem;
+  width: 90vw;
+  margin-left: 32px;
+  margin-top: 20px;
   padding: 1rem;
 
   /* New Black Box Styling */
