--- a/src/Modules/Scholarship/convenor/components/CatalogC.module.css
+++ b/src/Modules/Scholarship/convenor/components/CatalogC.module.css
@@ -15,6 +15,7 @@
   color: gray;
   padding: 0.5rem;
   white-space: nowrap; /* Prevent text wrapping */
+  position: relative; /* For the active indicator */
 }
 
 .activeItem {
@@ -31,29 +32,15 @@
   background-color: #fff; /* Optional: Background */
 }
 
-/* Custom Scrollbar */
-.contentContainer::-webkit-scrollbar {
-  width: 4px; /* Thin scrollbar */
-}
 
-.contentContainer::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Light gray scrollbar track */
-  border-radius: 10px; /* Rounded track */
-}
 
-.contentContainer::-webkit-scrollbar-thumb {
-  background-color: #17ABFF; /* Blue thumb */
-  border-radius: 5px; /* Rounded thumb */
-}
 
-.contentContainer::-webkit-scrollbar-thumb:hover {
-  background-color: #0d87d6; /* Darker blue on hover */
-}
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-size: 24px;
 }
 
 .editButton {
