--- a/src/Modules/Scholarship/user/components/ScholarshipStatus.module.css
+++ b/src/Modules/Scholarship/user/components/ScholarshipStatus.module.css
@@ -1,7 +1,6 @@
 .wrapper {
   font-family: Arial, sans-serif;
-  max-width: 600px;
-  margin: 0 auto;
+  max-width: 100%;
   padding: 20px;
 }
 
@@ -24,9 +23,8 @@
 }
 
 .scholarshipName {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
-  margin-bottom: 15px;
 }
 
 .form {
@@ -47,10 +45,9 @@
   gap: 5px;
 }
 
-.inputContainer {
-  display: flex;
-  flex-direction: column;
-}
+/* .inputContainer {
+  
+} */
 
 .select,
 .inputField {
@@ -77,7 +74,7 @@
   padding: 10px 20px;
   cursor: pointer;
   font-size: 14px;
-  margin-bottom: 5%;
+  margin-bottom: 5px;
 }
 
 .checkStatusButton:hover {
@@ -128,3 +125,9 @@
 }
 
 
+.sch{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
