--- a/src/Modules/Scholarship/user/components/SpacsMembers.module.css
+++ b/src/Modules/Scholarship/user/components/SpacsMembers.module.css
@@ -6,6 +6,7 @@
 .heading {
   font-weight: bold;
   margin-bottom: 0.5rem;
+  font-size: 24px;
 }
 
 .membersContainer {
@@ -20,11 +21,13 @@
   border: 1px solid black;
   border-radius: 0.375rem;
   padding: 1rem;
-  min-width: 250px;
+  width: 80%;
+  /* min-width: 250px; */
 }
 
 .cardHeading {
   margin-bottom: 0.5rem;
+  font-size: 24px;
 }
 
 .memb {
@@ -33,6 +36,7 @@
   padding: 1px;
   margin: auto;
   border-radius: 0.375rem;
+  font-size: 14px;
 }
 
 .nameRole {
@@ -40,17 +44,20 @@
   flex-direction: column;
   margin-top: 0.5rem;
   margin-bottom: 0.25rem; /* Reduced gap between name and role */
+  font-size: 14px;
 }
 
 .name {
   font-weight: normal;
   margin: 0;
+  font-size: 14px;
 }
 
 .role {
   font-weight: lighter;
   color: #555;
   margin: 0;
+  font-size: 14px;
 }
 
 .icon {
@@ -62,6 +69,7 @@
   align-items: center;
   gap: 0.5rem; /* Gap between icon and label */
   margin-bottom: 0.5rem;
+  font-size: 14px;
 }
 
 .contactLabel {
