--- a/src/Modules/Scholarship/convenor/components/previousWinnersC.module.css
+++ b/src/Modules/Scholarship/convenor/components/previousWinnersC.module.css
@@ -59,26 +59,9 @@
   background-color: #1499e6;
 }
 
-/* Added styles for the table and container */
-.tableContainer {
-  border: 1px solid blue;
-  border-radius: 10px;
-  background-color: #edf7f8;
-  overflow: hidden;
-  margin-top: 20px;
-}
 
-.table {
-  width: 100%;
-}
-
-.table th,
-.table td {
-  padding: 12px;
+.table{
   text-align: left;
-  border-bottom: 1px solid #ccc;
+  font-size: 14px;
 }
 
-.table th {
-  background-color: #d2ecf0;
-}
