--- a/src/Modules/Scholarship/convenor/forms/inviteApplications.module.css
+++ b/src/Modules/Scholarship/convenor/forms/inviteApplications.module.css
@@ -1,20 +1,25 @@
 .container {
    padding-right: 500px;
-    margin: 0 auto;
+    margin: 0 34px;
     font-family: Arial, sans-serif;
     text-align: left; 
-    padding-left: 150px;
+    width: 90vw;
+    background-color: white;
+    border: 1px solid  #C9EBFF;
+    border-radius:  0.375rem;
   }
   
   .tabs {
-    display: flex;
-    justify-content: flex-start;
+    padding-top: 5%;
+    margin-left: 10%;
+    width: 80vw;
     border-bottom: 2px solid #e0e0e0;
     margin-bottom: 20px;
+
   }
   
   .activeTab {
-    border-bottom:  solid #2196f3;
+    border-bottom:  solid  #C9EBFF;
     color: #2196f3;
     font-weight: bold;
   }
@@ -22,7 +27,10 @@
   .form {
     background-color: #fff;
     padding: 20px;
+    margin-left: 10%;
     border-radius: 4px;
+    width: 80vw;
+    border:1px solid  #C9EBFF;
   }
   
   .row {
