--- a/src/Modules/Scholarship/user/pages/ScholarshipPage.module.css
+++ b/src/Modules/Scholarship/user/pages/ScholarshipPage.module.css
@@ -1,6 +1,6 @@
 .pageBackground {
   background-color: white;
-  width: 90vw; /* Full viewport width */
+  width: 95%;
   margin-left: 32px;
   margin-top: 20px;
   justify-content: center;
