--- a/src/Modules/Scholarship/user/components/PreviousWinners.module.css
+++ b/src/Modules/Scholarship/user/components/PreviousWinners.module.css
@@ -3,18 +3,15 @@
 }
 
 .formRow {
-  display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
-}
-
-.formItem {
-  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 columns for larger screens */
+  gap: 1rem; /* Gap between cards */
 }
 
 .label {
   font-weight: bold; /* Make the label text bold */
   margin-bottom: 5px; /* Space between the label and select */
+  width: 100%;
 }
 
 .selectContainer {
@@ -43,6 +40,7 @@
 .buttonContainer {
   display: flex;
   justify-content: flex-end;
+  margin-top: 2%;
 }
 
 .submitButton {
@@ -80,4 +78,17 @@
 
 tr:nth-child(odd) {
   background-color: rgb(220, 223, 224);
+}
+
+
+@media (max-width: 1024px) {
+  .formRow {
+    grid-template-columns: repeat(2, 1fr); /* 2 columns for medium screens */
+  }
+}
+
+@media (max-width: 768px) {
+  .formRow {
+    grid-template-columns: 1fr; /* 1 column for small screens */
+  }
 }
